samples/network-policies/deny-all-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {} #Selects all the pods
  ingress: [] # Indicates nothing is whitelisted.
